--- a/src/Box2DBindings/Box2DBindings.csproj
+++ b/src/Box2DBindings/Box2DBindings.csproj
@@ -59,7 +59,10 @@
         <None Include="native/linux-x64/libbox2d.so" Pack="true" PackagePath="runtimes/linux-x64/native/" />
         <!-- OSX DYLIB -->
         <None Include="native/osx-x64/libbox2d.dylib" Pack="true" PackagePath="runtimes/osx-x64/native/" Condition="Exists('native/osx-x64/libbox2d.dylib')" />
-            
+        <!-- OSX ARM64 DYLIB -->
+        <None Include="native/osx-arm64/libbox2d.dylib" Pack="true" PackagePath="runtimes/osx-arm64/native/" Condition="Exists('native/osx-x64/libbox2d.dylib')" />
+
+
         <!-- XMLDoc -->
         <None Include="bin/$(Configuration)/netstandard2.1/Box2DBindings.xml" Pack="true" PackagePath="lib/netstandard2.1/" />
     </ItemGroup>
