--- a/src/Box2DBindings/Box2DBindings.csproj
+++ b/src/Box2DBindings/Box2DBindings.csproj
@@ -28,8 +28,8 @@
         <Hour>$([System.DateTime]::UtcNow.ToString("HH"))</Hour>
         <Minute>$([System.DateTime]::UtcNow.ToString("mm"))</Minute>
         
-        <Version>$(Year).$(Month).$(Day).$(Hour)$(Minute)</Version>
-        <AssemblyVersion>$(Year).$(Month).$(Day).$(Hour)$(Minute)-threading-alpha-0</AssemblyVersion>
+        <Version>$(Year).$(Month).$(Day).$(Hour)$(Minute)-threading-alpha-0</Version>
+        <AssemblyVersion>$(Year).$(Month).$(Day).$(Hour)$(Minute)</AssemblyVersion>
         <Copyright>Copyright © 2025 Hugh Phoenix-Hulme</Copyright>
         <PackageProjectUrl>https://github.com/HughPH/Box2D-dotnet-bindings/</PackageProjectUrl>
     </PropertyGroup>
