Removed redundant cache check step Fixed native builds

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -14,11 +14,11 @@ env:
     NUGET_FEED: https://api.nuget.org/v3/index.json
 
 # -----------------------------------------------------------------------------
-# Job 1 ─ Detect upstream tag, compute NuGet version, probe one cache row
+# Job 1 ─ Detect upstream tag & compute NuGet version (no cache probe anymore)
 # -----------------------------------------------------------------------------
 jobs:
     detect-tag:
-        name: Detect Box2D tag & cache state
+        name: Detect Box2D tag & compute version
         runs-on: ubuntu-latest
         env:
             GH_TOKEN: ${{ github.token }}
@@ -27,37 +27,28 @@ jobs:
         outputs:
             box2d_tag: ${{ steps.tag.outputs.tag }}
             pkg_ver:   ${{ steps.version.outputs.value }}
-            cache_key: ${{ steps.cache.outputs.key }}
-            cold:      ${{ steps.cache.outputs.cold }}
         steps:
+            # ───────────── Latest upstream release tag ─────────────
             - id: tag
               name: "Fetch latest Box2D release tag"
               run: |
                   tag=$(gh api /repos/$BOX2D_REPO/releases/latest --jq .tag_name)
                   echo "tag=$tag" >> "$GITHUB_OUTPUT"
-
+            
+            # ───────────── Compute package version once per run ─────────────
             - id: version
               name: "Compute managed package version string"
               run: |
                   ts=$(date -u '+%Y.%m.%d.%H%M')
                   branch="${GITHUB_REF_NAME##*/}"
                   if [ "$branch" = "main" ] || [ "$branch" = "master" ]; then
-                      version="$ts"
+                    version="$ts"
                   else
-                      safe_branch=$(echo "$branch" | tr '/ "' '--')
-                      version="$ts-$safe_branch"
+                    safe_branch=$(echo "$branch" | tr '/ "' '--')
+                    version="$ts-$safe_branch"
                   fi
                   echo "value=$version" >> "$GITHUB_OUTPUT"
-
-            - id: cache
-              name: "Probe Linux‑x64 cache row"
-              run: |
-                  key="linux-x64-${{ steps.tag.outputs.tag }}"
-                  cold=true
-                  gh api repos/$GITHUB_REPOSITORY/actions/caches --jq '.actions_caches[].key' | grep -q "^$key$" && cold=false
-                  echo "key=$key"  >> "$GITHUB_OUTPUT"
-                  echo "cold=$cold" >> "$GITHUB_OUTPUT"
-
+    
     # -----------------------------------------------------------------------------
     # Job 2 ─ Build (or reuse) Box2D native libs for every supported target
     # -----------------------------------------------------------------------------
@@ -69,75 +60,64 @@ jobs:
                 include:
                     # Linux x64
                     - target: linux-x64
-                      os: ubuntu-latest
-                      arch: x64
                       runs_on: ubuntu-latest
                       cmake_flags: >
                           -DBUILD_SHARED_LIBS=ON -DBOX2D_UNIT_TESTS=OFF -DCMAKE_BUILD_TYPE=Release -DBOX2D_SAMPLES=OFF -DCMAKE_LIBRARY_OUTPUT_DIRECTORY=bin -DCMAKE_RUNTIME_OUTPUT_DIRECTORY=bin -DCMAKE_C_FLAGS="-Wno-error=maybe-uninitialized"
-
+                    
                     # Linux x86 (cross‑compile)
                     - target: linux-x86
-                      os: ubuntu-latest
-                      arch: x86
                       runs_on: ubuntu-latest
                       cmake_flags: >
-                          -DBUILD_SHARED_LIBS=ON -DBOX2D_UNIT_TESTS=OFF -DCMAKE_BUILD_TYPE=Release -DBOX2D_SAMPLES=OFF -DCMAKE_LIBRARY_OUTPUT_DIRECTORY=bin -DCMAKE_RUNTIME_OUTPUT_DIRECTORY=bin -DCMAKE_C_FLAGS="-Wno-error=maybe-uninitialized"
-
+                          -DBUILD_SHARED_LIBS=ON -DBOX2D_UNIT_TESTS=OFF -DCMAKE_BUILD_TYPE=Release -DBOX2D_SAMPLES=OFF -DCMAKE_LIBRARY_OUTPUT_DIRECTORY=bin -DCMAKE_RUNTIME_OUTPUT_DIRECTORY=bin -DCMAKE_C_FLAGS="-m32 -Wno-error=maybe-uninitialized" -DCMAKE_CXX_FLAGS="-m32 -Wno-error=maybe-uninitialized"
+                    
                     # Linux ARM64
                     - target: linux-arm64
-                      os: ubuntu-latest
-                      arch: arm64
-                      runs_on: ubuntu-latest
+                      runs_on: ubuntu-22.04-arm64
                       cmake_flags: >
                           -DBUILD_SHARED_LIBS=ON -DBOX2D_UNIT_TESTS=OFF -DCMAKE_BUILD_TYPE=Release -DBOX2D_SAMPLES=OFF -DCMAKE_LIBRARY_OUTPUT_DIRECTORY=bin -DCMAKE_RUNTIME_OUTPUT_DIRECTORY=bin -DCMAKE_C_FLAGS="-Wno-error=maybe-uninitialized"
-
+                    
                     # Windows x64
                     - target: windows-x64
-                      os: windows-latest
-                      arch: x64
                       runs_on: windows-latest
                       cmake_flags: >
                           -DBUILD_SHARED_LIBS=ON -DCMAKE_BUILD_TYPE=Release -DBOX2D_SAMPLES=OFF
-
+                    
                     # Windows x86
                     - target: windows-x86
-                      os: windows-latest
-                      arch: x86
                       runs_on: windows-latest
                       cmake_flags: >
-                          -DBUILD_SHARED_LIBS=ON -DCMAKE_BUILD_TYPE=Release -DBOX2D_SAMPLES=OFF -DCMAKE_GENERATOR_PLATFORM=Win32  -DCMAKE_C_FLAGS="/wd4738" -DCMAKE_CXX_FLAGS="/wd4738"
-
+                          -DBUILD_SHARED_LIBS=ON -DCMAKE_BUILD_TYPE=Release -DBOX2D_SAMPLES=OFF -DCMAKE_GENERATOR_PLATFORM=Win32 -DCMAKE_C_FLAGS="/wd4738" -DCMAKE_CXX_FLAGS="/wd4738"
+                    
                     # Windows ARM64
                     - target: windows-arm64
-                      os: windows-latest
-                      arch: arm64
                       runs_on: windows-latest
                       cmake_flags: >
-                          -DBUILD_SHARED_LIBS=ON -DCMAKE_BUILD_TYPE=Release -DBOX2D_SAMPLES=OFF -DCMAKE_GENERATOR_PLATFORM=ARM64
-
+                          -DBUILD_SHARED_LIBS=ON -DCMAKE_BUILD_TYPE=Release -DBOX2D_SAMPLES=OFF -DCMAKE_GENERATOR_PLATFORM=ARM64 -DCMAKE_C_FLAGS="/wd4738" -DCMAKE_CXX_FLAGS="/wd4738"
+                    
                     # macOS x64
                     - target: macos-x64
-                      os: macos-latest
-                      arch: x64
-                      runs_on: macos-latest
+                      runs_on: macos-13
                       cmake_flags: >
                           -DBUILD_SHARED_LIBS=ON -DCMAKE_BUILD_TYPE=Release -DBOX2D_SAMPLES=OFF -DCMAKE_LIBRARY_OUTPUT_DIRECTORY=bin -DCMAKE_RUNTIME_OUTPUT_DIRECTORY=bin
-
+                    
                     # macOS ARM64
                     - target: macos-arm64
-                      os: macos-latest
-                      arch: arm64
-                      runs_on: macos-latest
+                      runs_on: macos-14
                       cmake_flags: >
                           -DBUILD_SHARED_LIBS=ON -DCMAKE_BUILD_TYPE=Release -DBOX2D_SAMPLES=OFF -DCMAKE_LIBRARY_OUTPUT_DIRECTORY=bin -DCMAKE_RUNTIME_OUTPUT_DIRECTORY=bin
         runs-on: ${{ matrix.runs_on }}
-
+        
         concurrency:
             group: box2d-${{ matrix.target }}
             cancel-in-progress: false
-
+        
         steps:
             - uses: actions/checkout@v4
+            
+            # Install 32‑bit toolchain when building linux‑x86
+            - name: "Install gcc‑multilib for 32‑bit build"
+              if: matrix.target == 'linux-x86' && steps.cache.outputs.cache-hit != 'true'
+              run: sudo apt-get update && sudo apt-get install --no-install-recommends -y gcc-multilib g++-multilib
 
             - id: cache
               name: Restore native build cache
@@ -150,8 +130,7 @@ jobs:
 
             - name: "Clone Box2D ${{ needs.detect-tag.outputs.box2d_tag }}"
               if: steps.cache.outputs.cache-hit != 'true'
-              run: |
-                  git clone --depth 1 --branch "${{ needs.detect-tag.outputs.box2d_tag }}" https://github.com/${{ env.BOX2D_REPO }} box2d-src
+              run: git clone --depth 1 --branch "${{ needs.detect-tag.outputs.box2d_tag }}" https://github.com/${{ env.BOX2D_REPO }} box2d-src
 
             - name: "Configure & compile Box2D"
               if: steps.cache.outputs.cache-hit != 'true'
@@ -165,7 +144,7 @@ jobs:
                   name: box2d-${{ needs.detect-tag.outputs.box2d_tag }}-${{ matrix.target }}
                   path: box2d-build/**/*
                   retention-days: 7
-
+    
     # -----------------------------------------------------------------------------
     # Job 3 ─ Build & publish the managed C# bindings package
     # -----------------------------------------------------------------------------
@@ -209,7 +188,7 @@ jobs:
     
             - name: Run UnitTests
               run: dotnet test src/UnitTests --configuration Release --no-build --logger trx --results-directory TestResults
-    
+
             - name: "Pack & push to NuGet"
               env:
                   NUGET_API_KEY: ${{ secrets.NUGET_API_KEY }}
