Added nuke option for -Werror, YOLO

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -67,10 +67,12 @@ jobs:
                     # Linux x86 (cross‑compile)
                     - target: linux-x86
                       runs_on: ubuntu-latest
+                      pre_build_script: |
+                          sed -i 's/-Werror//g' box2d-src/CMakeLists.txt
                       cmake_flags: >
-                          -DBOX2D_DISABLE_SIMD=ON -DBOX2D_COMPILE_WARNING_AS_ERROR=OFF \
+                          --DCOMPILE_WARNING_AS_ERROR=OFF \
                           -DBUILD_SHARED_LIBS=ON -DBOX2D_UNIT_TESTS=OFF -DCMAKE_BUILD_TYPE=Release -DBOX2D_SAMPLES=OFF -DCMAKE_LIBRARY_OUTPUT_DIRECTORY=bin -DCMAKE_RUNTIME_OUTPUT_DIRECTORY=bin \
-                          -DCMAKE_C_FLAGS="-m32 -Wno-error -Wno-error=maybe-uninitialized -Wno-error=psabi" -DCMAKE_CXX_FLAGS="-m32 -Wno-error -Wno-error=maybe-uninitialized -Wno-error=psabi"
+                          -DCMAKE_C_FLAGS="-m32 -msse2 -Wno-error -Wno-error=maybe-uninitialized -Wno-error=psabi" -DCMAKE_CXX_FLAGS="-m32 -msse2 -Wno-error -Wno-error=maybe-uninitialized -Wno-error=psabi"
                     
                     # Linux ARM64
                     - target: linux-arm64
