--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -77,31 +77,31 @@ jobs:
                           -DBUILD_SHARED_LIBS=ON -DCMAKE_BUILD_TYPE=Release -DBOX2D_SAMPLES=OFF -DCMAKE_LIBRARY_OUTPUT_DIRECTORY=bin -DCMAKE_RUNTIME_OUTPUT_DIRECTORY=bin -DCMAKE_C_FLAGS="-Wno-error=maybe-uninitialized"
                     
                     # Windows x64
-                    - target: windows-x64
+                    - target: win-x64
                       runs_on: windows-latest
                       cmake_flags: >
                           -DBUILD_SHARED_LIBS=ON -DCMAKE_BUILD_TYPE=Release -DBOX2D_SAMPLES=OFF
                     
                     # Windows x86
-                    - target: windows-x86
+                    - target: win-x86
                       runs_on: windows-latest
                       cmake_flags: >
                           -DBUILD_SHARED_LIBS=ON -DCMAKE_BUILD_TYPE=Release -DBOX2D_SAMPLES=OFF -DCMAKE_GENERATOR_PLATFORM=Win32 -DCMAKE_C_FLAGS="/wd4738" -DCMAKE_CXX_FLAGS="/wd4738"
                     
                     # Windows ARM64
-                    - target: windows-arm64
+                    - target: win-arm64
                       runs_on: windows-latest
                       cmake_flags: >
                           -DBUILD_SHARED_LIBS=ON -DCMAKE_BUILD_TYPE=Release -DBOX2D_SAMPLES=OFF -DCMAKE_GENERATOR_PLATFORM=ARM64 -DCMAKE_C_FLAGS="/wd4738" -DCMAKE_CXX_FLAGS="/wd4738"
                     
                     # macOS x64
-                    - target: macos-x64
+                    - target: osx-x64
                       runs_on: macos-13
                       cmake_flags: >
                           -DBUILD_SHARED_LIBS=ON -DCMAKE_BUILD_TYPE=Release -DBOX2D_SAMPLES=OFF -DCMAKE_LIBRARY_OUTPUT_DIRECTORY=bin -DCMAKE_RUNTIME_OUTPUT_DIRECTORY=bin
                     
                     # macOS ARM64
-                    - target: macos-arm64
+                    - target: osx-arm64
                       runs_on: macos-14
                       cmake_flags: >
                           -DBUILD_SHARED_LIBS=ON -DCMAKE_BUILD_TYPE=Release -DBOX2D_SAMPLES=OFF -DCMAKE_LIBRARY_OUTPUT_DIRECTORY=bin -DCMAKE_RUNTIME_OUTPUT_DIRECTORY=bin
@@ -138,15 +138,25 @@ jobs:
                   cmake -S box2d-src -B box2d-build ${{ matrix.cmake_flags }}
                   cmake --build box2d-build --config Release --parallel
 
-            - name: "Upload artefacts"
-              uses: actions/upload-artifact@v4
-              with:
-                  name: box2d-${{ needs.detect-tag.outputs.box2d_tag }}-${{ matrix.target }}
-                  path: |
-                      box2d-build/bin/libbox2d.so
-                      box2d-build/bin/libbox2d.dylib
-                      box2d-build/bin/box2d.dll
-                  retention-days: 7
+            -   name: Prepare artefact directory
+                run: |
+                    mkdir -p artefact/${{ matrix.target }}
+                    if [ -f box2d-build/bin/libbox2d.so ]; then
+                      cp box2d-build/bin/libbox2d.so artefact/${{ matrix.target }}/
+                    fi
+                    if [ -f box2d-build/bin/libbox2d.dylib ]; then
+                      cp box2d-build/bin/libbox2d.dylib artefact/${{ matrix.target }}/
+                    fi
+                    if [ -f box2d-build/bin/box2d.dll ]; then
+                      cp box2d-build/bin/box2d.dll artefact/${{ matrix.target }}/
+                    fi
+
+            -   name: Upload artefacts
+                uses: actions/upload-artifact@v4
+                with:
+                    name: box2d-${{ needs.detect-tag.outputs.box2d_tag }}-${{ matrix.target }}
+                    path: artefact/${{ matrix.target }}/
+                    retention-days: 7
     
     # -----------------------------------------------------------------------------
     # Job 3 ─ Build & publish the managed C# bindings package
